[project]
name = "bloom-backend"
version = "0.1.0"
description = "FastAPI backend for Bloom."
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.110,<1",
  "pydantic>=2.6,<3",
  "pyyaml>=6,<7",
  "rich>=13,<15",
  "typer>=0.26.4",
  "uvicorn>=0.27,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2.3.0",
  "pytest>=8,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
